# AIOS-MVP

./: .claude.json  .clippy.toml  .coverage  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitconfig  .gitignore  .gitmodules  .hook_placeholder_probe.txt  .lmstudio-home-pointer  .mlc.config.json  .moonshot_ai_rc  .pre-commit-config.yaml  .roo.ignore  .roo.json  .roomodes  .roorc  .secrets.baseline  .tarpaulin.toml  .wslconfig  1_DANE_DO_WDROZENIA.md  3D-VISUALIZATION-INDEX.md  =2.0.0  ADRION369_Autonomous_Agent_Prompt.docx  ADRION_STARTUP_GUIDE.md  AIDER_CORE_KNOWLEDGE.txt  AIOS_V1_0_RELEASE_NOTES.md  ANALIZA_ZBEDNYCH_ELEMENTOW.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DEPENDABOT_CODESPACES_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_369.md  DEPLOYMENT_QUICKSTART.md  (+138 more)
.1_RAPORTY_WDRAŻANIA/: ADRION-369-Deployment-Plan-14-05-2026.md  ADRION-369-Docker-Stack-Deployment-15-05-2026.md  ANALIZA-FOLDERU-ADRION-369-14-05-2026.md  RAPORT-WDRAŻANIA-ADRION-369-14-05-2026.md
.claude/: README.md  settings.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  adrion-architect.agent.md  adrion-protocol.md  adrion-skills.skill.md  commands.prompt.md  copilot-anti-patterns.md  copilot-capability-routing.md  copilot-instructions.md  copilot-local-payload-v3.md  copilot-observability-trace.md  dependabot.yml  high-yield-dev.agent.md  master-orchestrator.agent.md  pull_request_template.md  security-guard.agent.md
.n8nac/: ai-context.json
.roo/: README.md  google-oauth-mapping.md  mcp-security.md  mcp.json  oauth-faq.md  oauth_config.ini
.vercel/: project.json
.zap/: rules.conf
20_NARZEDZIA/: convert_all_global_recursive.py  convert_pdf_to_md.py  delete_filosofia_recursive.py  scan_all_dokumentacja.py
30_WIZUALIZACJE/: ADRION-369-3D-Ecosystem.html
3d-object-generation/: INTEGRATION.md  README.md
40_RAPORTY/: AUDIT_REPORT_v1.md
Genesis Record/: DEPLOYMENT_STATUS_06-04-2026.md  HEALER_LOGS.txt  README.md  SECURITY_AUDIT_REPORT.md  SYSTEM_OPTIMIZATION_FINAL_SUMMARY_06-04-2026.md  SYSTEM_OPTIMIZATION_REPORT_2026-04-06.md  event_log.jsonl
PLAN/: Organizacja_Przestrzeni_15-05-2026.md
PROGRESS/: Organizacja_Przestrzeni_15-05-2026.md
Phase2_Distribution_Package_Apr8_2026/: ATAM_WORKSHOP_PREPARATION_2026-04-15.md  EMAIL_TEMPLATES_6_PERSONAS_Apr8.md  INDEX_READ_ME_FIRST.md  PERSONA_PREP_GUIDES_Workshop_2026-04-15.md  PHASE2_DAY1_EXECUTION_CHECKLIST_Apr22.md  PHASE2_MASTER_TIMELINE_2026-Apr-Jul.md
REPORTS/: ORGANIZATION_DRY_RUN_15-05-2026.md  WORKSHOP_HEALER_DELIVERABLES_2026-04-06.md  WORKSHOP_LIBRARIAN_DELIVERABLES_2026-04-06.md  WORKSHOP_SENTINEL_DELIVERABLES_2026-04-06.md
adrion-swarm/: .env.example  docker-compose.yml
agents/: Cargo.toml  build.rs
arbitrage/: __init__.py  amplifier.py  analyzer.py  api.py  app.py  autopilot.py  bidder.py  circuit_breaker.py  config.py  database.py  db.py  executor.py  guardian.py  guardian_g4_enhanced.py  hexagon.py  llm.py  main.py  mass_generator.py  metrics.py  oracle.py  orchestrator.py  payments.py  pipeline_unified.py  project_state_confidence.py  quantum.py  rag_integration.py  rate_limiter.py  schema_wholesale.sql  scout.py  stream_emitters.py  trinity.py  wholesale_orchestrator.py  wholesale_scout.py  xrp.py  xrp_tracker.py
arbitrage-core/: B2B-WHOLESALE-BRIDGE.docx
archive/poc/end-to-end-flow/: Cargo.toml
archive/poc/end-to-end-flow/src/: main.rs
config/: agent_sources.json  design-tokens.css  memoryos.local.yml  personas.yml  reference_constants.py  roo.profiles.json  roo.rules.json  trinity-weights.yml
dashboard/: app.py  index.html  server.py  theme.css
db/: MIGRATION_GUIDE.md  adrion_local.db
docker/: Dockerfile.aios-mvp  Dockerfile.genesis-mcp  Dockerfile.guardian-mcp  Dockerfile.mcp-router  Dockerfile.recursive-mcp  Dockerfile.vortex  docker-compose.cloud.yml  docker-compose.lmstudio.yml  docker-compose.local.yml  docker-compose.mcp-tier.yml  docker-compose.n8n-adrion.yml  docker-compose.oracle.yml  docker-compose.prod.yml
docs/: 03_CORE_GUARDIANS.md  162D-DECISION-SPACE.md  ADRION-ROO-EXECUTION-SCHEMA.md  ADRION-V4-ENHANCEMENTS.md  ADRION_369_ARCHITECTURE_FRAMEWORK.md  AIDER_CORE_KNOWLEDGE.txt  API_EVENT_SOURCING_GENESIS_MCP.md  API_SCHEMA.yaml  ARCHITECTURE.md  ARCHITECTURE_ROPE_3.0.md  ARCHITECTURE_VISUAL.md  CAPABILITY_MODEL.md  CLOUD_DEPLOYMENT_RESEARCH.md  COMPRESSION_GUIDE.md  DASHBOARD-FUNKCJONALNOSCI.md  DATABASE-RESTORE-PROCEDURE.md  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_RUNBOOK.md  DISASTER_RECOVERY.md  DOCUMENT_ANALYSIS_INTEGRATION_REPORT.md  EBDI-MODEL.md  EXECUTIVE_ARCHITECTURE_SUMMARY.md  EXTENSION_COMPREHENSIVE_TESTING.md  GITHUB_PAGES_SETUP.md  GUARDIAN_LAWS_CANONICAL.json  IMPLEMENTATION-ROADMAP-Structure-Creation.md  IMPORTANCE_INDEX.md  INDEX.md  INSTALL.md  INTEGRATED-ADVANCED-ARCHITECTURE.md  (+64 more)
migration_batches/batch1/review-bucket/poc/end-to-end-flow/: Cargo.toml
poc/end-to-end-flow/: Cargo.toml
poc/end-to-end-flow/src/: main.rs
(+1896 files in other folders)
