[package]
name = "end-to-end-flow"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aios-kernel = { path = "../../kernel" }
aios-agents = { path = "../../agents" }
aios-ipc = { path = "../../ipc" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "end-to-end-flow"
path = "src/main.rs"
