[package]
name = "end-to-end-flow"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aios-kernel = { path = "../../kernel" }
aios-agents = { path = "../../agents" }
aios-ipc = { path = "../../ipc" }
tokio     = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "end-to-end-flow"
path = "src/main.rs"
